--- a/.gitignore
+++ b/.gitignore
@@ -16,12 +16,14 @@ migrate_working_dir/
 *.iml
 *.ipr
 *.iws
-.idea/
+.idea/*
+!.idea/flutter_settings.json
 
 # The .vscode folder contains launch configuration and tasks you configure in
 # VS Code which you may wish to be included in version control, so this line
 # is commented out by default.
-#.vscode/
+.vscode/
+!.vscode/settings.json
 
 # Flutter/Dart/Pub related
 **/doc/api/
@@ -44,5 +46,6 @@ app.*.map.json
 /android/app/profile
 /android/app/release
 
-# FVM Version Cache
+# FVM
 .fvm/flutter_sdk
+!.fvmrc
