--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,13 +30,16 @@ environment:
 dependencies:
   cupertino_icons: ^1.0.8
   dartz: ^0.10.1
+  device_preview: ^1.2.0
   flutter:
     sdk: flutter
   flutter_bloc: ^9.1.0
+  flutter_launcher_icons: ^0.14.3
   flutter_svg: ^2.0.17
   go_router: ^14.8.1
   google_fonts: ^6.2.1
   shared_preferences: ^2.5.3
+  smooth_page_indicator: ^1.2.1
 
 dev_dependencies:
   flutter_lints: ^5.0.0
