--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   dartz: ^0.10.1
   device_preview: ^1.2.0
+  firebase_core: ^3.13.0
   flutter:
     sdk: flutter
   flutter_bloc: ^9.1.0
