--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   google_fonts: ^6.2.1
   shared_preferences: ^2.5.3
   smooth_page_indicator: ^1.2.1
+  intl_phone_number_input: ^0.7.4
 
 dev_dependencies:
   flutter_launcher_icons: ^0.14.3
