feat: add AlertButtonCubit and initial state implementation
- Created AlertButtonCubit to manage the state of alert buttons.
- Defined AlertButtonState as a sealed class with an initial state, AlertButtonInitial.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,7 @@ flutter:
   assets:
     - assets/images/
     - assets/home_page_assets/icons/
+    - assets/home_page_assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
