--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   dartz: ^0.10.1
   device_preview: ^1.2.0
+  firebase_auth: ^5.5.2
   firebase_core: ^3.13.0
   flutter:
     sdk: flutter
@@ -38,9 +39,9 @@ dependencies:
   flutter_svg: ^2.0.17
   go_router: ^14.8.1
   google_fonts: ^6.2.1
+  intl_phone_number_input: ^0.7.4
   shared_preferences: ^2.5.3
   smooth_page_indicator: ^1.2.1
-  intl_phone_number_input: ^0.7.4
 
 dev_dependencies:
   flutter_launcher_icons: ^0.14.3
