--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,9 +38,10 @@ dependencies:
   flutter_svg: ^2.0.17
   go_router: ^14.8.1
   google_fonts: ^6.2.1
+  intl_phone_number_input: ^0.7.4
   shared_preferences: ^2.5.3
   smooth_page_indicator: ^1.2.1
-  intl_phone_number_input: ^0.7.4
+  supabase_flutter: ^2.8.4
 
 dev_dependencies:
   flutter_launcher_icons: ^0.14.3
