--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,15 +31,29 @@ dependencies:
   cupertino_icons: ^1.0.8
   dartz: ^0.10.1
   device_preview: ^1.2.0
-  firebase_core: ^3.13.0
+  geolocator: ^14.0.0
   flutter:
     sdk: flutter
+  cloud_firestore: ^4.8.0
+  vibration: ^3.1.3
   flutter_bloc: ^9.1.0
   flutter_svg: ^2.0.17
   go_router: ^14.8.1
   google_fonts: ^6.2.1
   shared_preferences: ^2.5.3
   smooth_page_indicator: ^1.2.1
+  flutter_map: ^8.1.1
+  latlong2: ^0.9.1
+  geocoding: ^2.0.5
+  equatable: ^2.0.7
+  audioplayers: ^6.4.0
+  camera: ^0.11.1
+  record: ^6.0.0
+  firebase_storage: 11.6.5
+  permission_handler: ^12.0.0+1
+  flutter_sound: ^9.2.13
+  path_provider: ^2.1.5
+  just_audio: ^0.10.0
 
 dev_dependencies:
   flutter_launcher_icons: ^0.14.3
