--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,8 @@ dependencies:
   flutter_sound: ^9.2.13
   path_provider: ^2.1.5
   just_audio: ^0.10.0
+  cloudinary_public: ^0.23.1
+  http: ^1.3.0
 
 dev_dependencies:
   flutter_launcher_icons: ^0.14.3
