--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,10 @@ dependencies:
   just_audio: ^0.10.0
   cloudinary_public: ^0.23.1
   http: ^1.3.0
+  uuid: ^4.5.1
+  cached_network_image: ^3.4.1
+  video_player: ^2.9.5
+  cloudinary_url_gen: ^1.0.0
 
 dev_dependencies:
   flutter_launcher_icons: ^0.14.3
