--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,6 +71,7 @@ flutter:
     - assets/home_page_assets/icons/
     - assets/home_page_assets/images/
     - assets/profile_assets/images/
+    - assets/profile_assets/icons/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
