--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,7 @@ dependencies:
   cached_network_image: ^3.4.1
   video_player: ^2.9.5
   cloudinary_url_gen: ^1.0.0
+  audio_waveforms: ^1.3.0
 
 dev_dependencies:
   flutter_launcher_icons: ^0.14.3
