--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,5 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+         xmlns:tools="http://schemas.android.com/tools">
      <uses-permission android:name="android.permission.INTERNET" />
      <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
      <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
@@ -7,7 +8,8 @@
      <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" 
                  android:maxSdkVersion="32" />
      <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" 
-                 android:maxSdkVersion="32" />
+                 android:maxSdkVersion="32" 
+                 tools:replace="android:maxSdkVersion" />
      <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
      <uses-permission android:name="android.permission.READ_MEDIA_VIDEO" />
      <uses-permission android:name="android.permission.READ_MEDIA_AUDIO" />
