--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  cloud_firestore: ^5.6.6
   cupertino_icons: ^1.0.8
   dartz: ^0.10.1
   device_preview: ^1.2.0
@@ -36,6 +37,10 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^9.1.0
   flutter_svg: ^2.0.17
+  flutter_contacts: ^1.1.6
+  permission_handler: ^12.0.0+1
+  firebase_auth: ^5.5.2
+  share_plus: ^7.1.0 
   go_router: ^14.8.1
   google_fonts: ^6.2.1
   shared_preferences: ^2.5.3
