feat: Update alert handling and improve UI components; refactor ReportsScreen to ReportsView and enhance date picker functionality

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
   "dart.flutterSdkPath": ".fvm/flutter_sdk",
   "search.exclude": {
     "**/.fvm": true
-  }
+  },
+  "cmake.ignoreCMakeListsMissing": true
 }
