--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,7 @@ dependencies:
   video_player: ^2.9.5
   cloudinary_url_gen: ^1.0.0
   audio_waveforms: ^1.3.0
+  chewie: ^1.11.3
 
 dev_dependencies:
   flutter_launcher_icons: ^0.14.3
